# hermes-agent-team

./: .gitignore  README.md  codex-AGENTS.md  codex-agents.sh  config-patch.yaml  install.sh  pyproject.toml
.github/workflows/: pylint.yml
claude-agents/: architect.md  backend.md  ceo.md  frontend.md  pjm.md  pm.md  qa.md  reviewer.md  ux-designer.md
claude-commands/: team-review.md
codex-skills/agent-architect/: SKILL.md
codex-skills/agent-backend/: SKILL.md
codex-skills/agent-ceo/: SKILL.md
codex-skills/agent-frontend/: SKILL.md
codex-skills/agent-pjm/: SKILL.md
codex-skills/agent-pm/: SKILL.md
codex-skills/agent-qa/: SKILL.md
codex-skills/agent-reviewer/: SKILL.md
codex-skills/agent-ux-designer/: SKILL.md
personalities/: pm.md
skills/agent-team-workflow/: SKILL.md
src/agent_team/: __init__.py  __main__.py  exceptions.py
src/agent_team/cli/: app.py
src/agent_team/config/: settings.py
src/agent_team/engine/: __init__.py  anthropic_client.py  base.py  claude.py  client_factory.py  openai_compat_client.py  prompt_builder.py  tool_executor.py
src/agent_team/output/: base.py  console.py  json_output.py  markdown_output.py
src/agent_team/roles/: models.py  registry.py
src/agent_team/roles/definitions/: architect.md  backend.md  ceo.md  frontend.md  pjm.md  qa.md  reviewer.md  ux-designer.md
src/agent_team/workflows/: analysis.py  base.py  execute.py
tests/: conftest.py  test_engine.py  test_roles.py  test_workflows.py
