[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-team"
version = "0.1.0"
description = "9人虚拟技术团队 CLI Agent - CEO/PM/架构师/前后端/QA/审查专家协作"
readme = "README.md"
license = "MIT"
authors = [{ name = "chentao326" }]
keywords = ["agent", "team", "claude", "llm", "cli", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]



requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]


[project.urls]
Homepage = "https://github.com/chentao326/hermes-agent-team"
Repository = "https://github.com/chentao326/hermes-agent-team.git"
Issues = "https://github.com/chentao326/hermes-agent-team/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
agent-team = "agent_team.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_team"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
